    * tbl_addfield.php, tbl_alter.php, tbl_create.php,
      libraries/common.lib.php, libraries/relation.lib.php: Use common code
      for CREATE/ALTER TABLE, set comments on creating table, so that user can
      see it in the query.
    * tbl_addfield.php, tbl_alter.php, tbl_create.php: Do not try to set
      comment and MIME transformation if field not named.


2005-10-07 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/check_user_privileges.lib.php: bug #1313821, dbname containing a 
      hyphen was not detected as being already created

2005-10-07 Michal Čihař  <michal@cihar.com>
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.
    * libraries/common.lib.php: Drop some old code.

2005-10-06 Michal Čihař  <michal@cihar.com>
    * import.php: Correctly report that file could not be read.
    * libraries/import/sql.php: Fix handling of whitespace at the end of
      imported file.
    * calendar.php, libraries/tbl_change.js: Calendar improvements: add submit
      button (bug# 1312373) and fix entering time begining with 0 (bug
      #1312373).

2005-10-05 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php, tbl_properties_table_info.php: detect
      MySQL 5.0.13 views
    * libraries/display_tbl.lib.php: bug #1306833, full text link broken,
      thanks to Vernon Lyon - vlyon
    * libraries/charset_conversion.lib.php: PMA_MYSQL_INT_VERSION is not
      defined at login time but what tested
    * libraries/display_create_table.lib.php, bug #1311384, Create table 
      dialog on escaped wildcard privileges

2005-10-04 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/functions.js, libraries/sql_query_form.lib.php:
      fixed JavaScript malfunction in querybox textarea with Opera

2005-10-03 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: support for Execute_priv

2005-10-01 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.
